<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2014 Google, Inc

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <string name="app_name">Live Capture</string>
    <string name="button_create">CREATE LIVE STREAM</string>
    <string name="connection_to_google_play_failed">You must choose an account.</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>
    <string name="refresh">Refresh</string>
    <string name="accounts">Accounts</string>
    <string name="pick_one_of_your_videos_to_submit">Create a new live event or click on one of your events to start streaming</string>
    <string name="no_videos_to_show_here_">Start A Live Stream Below</string>
    <string name="avatar">avatar</string>
    <string name="activeStreamingStatus">Currently streaming video.</string>
    <string name="activeStreamingLabel">Watch Me is streaming!</string>
    <string name="loadingEvents">Loading Scheduled Events...</string>
    <string name="creatingEvent">Creating Live Stream Event...</string>
    <string name="streamingOn">STREAMING</string>
    <string name="streamingOff">PAUSED</string>
    <string name="pauseevent">PAUSE</string>
    <string name="startEvent">START EVENT</string>
    <string name="endEvent">END STREAM</string>
    <string name="startingEvent">Starting event. Please wait…</string>
    <string name="endingEvent">Ending event. Please wait…</string>
    <string name="videoThumbnail">video thumbnail</string>
    <string name="camera">Switch Cameras</string>
    <string name="help">Help</string>
    <string name="description">Novel application that lets you live stream to YouTube right from your Android device</string>
    <string name="swipetolearn">Swipe to learn more ></string>
    <string name="perfectfor">Live Capture is prefect for...</string>
    <string name="vloggers">Vloggers</string>
    <string name="explorers">Explorers</string>
    <string name="programmers">Programmers</string>
    <string name="gamers">Gamers</string>
    <string name="musicians">Musicians</string>
    <string name="teenagers">Teenagers</string>
    <string name="fans">Fans</string>
    <string name="anyone">Anyone!</string>
    <string name="left">&lt; </string>
    <string name="right"> ></string>
    <string name="stream">Stream instantly with the press of one button</string>
    <string name="socialtitle">See people streaming using the application around the world</string>
    <string name="getstartedtitle">Get streaming on Android today</string>

</resources>