<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#005DDE"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/perfectfor"
        android:id="@+id/textView4"
        android:textColor="#FFF"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vloggers"
        android:textColor="#FFF"
        android:id="@+id/textView5"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:textSize="24dp"
        android:padding="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/explorers"
        android:textColor="#FFF"
        android:id="@+id/textView6"
        android:textSize="24dp"
        android:padding="8dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/programmers"
        android:textColor="#FFF"
        android:id="@+id/textView7"
        android:textSize="24dp"
        android:padding="8dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gamers"
        android:textColor="#FFF"
        android:id="@+id/textView8"
        android:textSize="24dp"
        android:padding="8dp"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/musicians"
        android:textColor="#FFF"
        android:id="@+id/textView9"
        android:textSize="24dp"
        android:padding="8dp"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/teenagers"
        android:textColor="#FFF"
        android:id="@+id/textView10"
        android:textSize="24dp"
        android:padding="8dp"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fans"
        android:textColor="#FFF"
        android:id="@+id/textView11"
        android:textSize="24dp"
        android:padding="8dp"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/anyone"
        android:textColor="#FFF"
        android:id="@+id/textView12"
        android:textSize="24dp"
        android:padding="8dp"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/right"
        android:id="@+id/textView13"
        android:textColor="#FFF"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/left"
        android:id="@+id/textView14"
        android:textColor="#FFF"
        android:layout_alignTop="@+id/textView13"
        android:layout_toLeftOf="@+id/textView4"
        android:layout_toStartOf="@+id/textView4" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:padding="5dp"
        android:src="@drawable/ic_vloggers"
        android:layout_alignTop="@+id/textView5"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:padding="5dp"
        android:src="@drawable/ic_explore"
        android:layout_above="@+id/textView7"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:padding="5dp"
        android:src="@drawable/ic_programmers"
        android:layout_below="@+id/imageView2"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:padding="5dp"
        android:src="@drawable/ic_gamer"
        android:layout_alignTop="@+id/textView8"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:padding="5dp"
        android:src="@drawable/ic_music"
        android:layout_alignTop="@+id/textView9"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:padding="5dp"
        android:src="@drawable/ic_teens"
        android:layout_alignTop="@+id/textView10"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView7"
        android:padding="5dp"
        android:src="@drawable/ic_fans"
        android:layout_above="@+id/textView12"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView8"
        android:padding="5dp"
        android:src="@drawable/ic_person"
        android:layout_alignBottom="@+id/textView12"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7" />

</RelativeLayout>